--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "leaflet-react-undo-redo",
   "version": "1.0.0",
   "description": "",
-  "keywords": [
-    "leaflet-react-undo-redo"
-  ],
+  "keywords": [],
   "main": "src/index.js",
   "dependencies": {
     "leaflet": "1.3.4",
-    "leaflet.pm": "0.25.0",
+    "leaflet-geometryutil": "0.9.0",
+    "leaflet-path-transform": "1.1.1",
+    "leaflet.pm": "1.0.1",
     "lodash": "latest",
-    "react": "16.7.0-alpha.0 - next",
-    "react-dom": "16.7.0-alpha.0 - next",
-    "react-redux": "latest",
+    "react": "16.6.3",
+    "react-dom": "16.6.3",
+    "react-redux": "5.1.1",
     "react-scripts": "2.0.3",
     "redux": "4.0.1",
     "redux-undo": "0.6.1"
